# django_practice

./: pyproject.toml
django1/: db.sqlite3
django1/accounts/: admin.py  managers.py  models.py
django1/accounts/migrations/: 0001_initial.py  0002_userclass_alter_customuser_email_and_more.py  0003_rename_userclass_usermanager_customuser_is_active_and_more.py  0004_delete_usermanager.py  0005_alter_customuser_email.py  0006_alter_customuser_email.py  0007_customuser_created_at_customuser_updated_at.py
django1/django1/: settings.py
django2_email_or_pass_auth/: db.sqlite3  manage.py
django2_email_or_pass_auth/accounts/: urls.py  views.py
django2_email_or_pass_auth/accounts/templates/: register.html
django2_email_or_pass_auth/custom_auth/: models.py
django2_email_or_pass_auth/custom_auth/migrations/: 0001_initial.py
django2_email_or_pass_auth/django2_email_or_pass_auth/: asgi.py  settings.py  urls.py  wsgi.py
django2_email_or_pass_auth/home/: views.py
django3_social_login/: manage.py  script.py
django3_social_login/django3_social_login/: asgi.py  settings.py  urls.py  wsgi.py
django3_social_login/home/: urls.py  views.py
django4/: db.sqlite3
django4/core/: settings.py  urls.py
django4/home/templates/: home.html
django4/users/: forms.py  models.py  signals.py  urls.py  views.py
django5/: script.py  testquery.py
django5/accounts/: admin.py  models.py  signals.py  urls.py  views.py
django5/core/: settings.py  urls.py
django5/home/: urls.py  views.py
django5/products/: admin.py  models.py
django5/profiles/: urls.py  views.py
(+37 files in other folders)
