[project]
name = "django-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.8",
    "django-allauth>=65.13.1",
    "jwt>=1.4.0",
    "pyjwt[crypto]>=2.10.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
